# pnrfr

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  LICENSE.md  License.txt  NAMESPACE  README.md
R/: pnrf_computations.R  pnrf_params.R  pnrf_reader.R  pnrfr.R  utils.R  zzz.R
cpp/: CMakeLists.txt  CMakeSettings.json  pnrfr.sln
cpp/pnrf/: CMakeLists.txt  dllmain.cpp  dllwrapper.cpp  meta.cpp  pnrferror.cpp  pnrfhelper.cpp  pnrfprocessor.vcxproj  stdafx.cpp
cpp/pnrf/def/: dllwrapper.def
cpp/pnrf/include/: dllwrapper.h  filemeta.h  fileprocessor.h  ioffline.h  pnrferror.h  pnrfhelper.h  stdafx.h
man/: check_alarm.Rd  compute_alarm.Rd  compute_feautres.Rd  compute_moving_average.Rd  compute_second_derivative.Rd  convert_channel_data_csv.Rd  generate_model.Rd  read_all_channel_data.Rd  read_channel_data.Rd  read_channel_data_obs.Rd  read_channel_data_size.Rd  read_file_meta.Rd  read_segment_data.Rd  save_channel_data.to_csv.Rd
tests/: rough.R  testthat.R
tests/testthat/: setup-xyz.R  teardown-xyz.R  test-negatives.R  test-positives.R
vignettes/: pnrfr.Rmd
